Say a meet as the side it turned out to be
Both ends of a meet come back as one of the two they were chosen from, so a
conjunction that took nothing off either side is told by the ends being the ones
that went in. Most are: a range met with the order it was already read against
is that range, and holding a position against its order is now asked of every
position of every choice.

Beside it the two sets that were built and wrapped for every leaf of every
clause and came back empty for most of them.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>